[package]
name = "picolua-src"
version = "542.0.0"
authors = ["EliseZeroTwo <elise@headpat.services>", "Aleksandr Orlenko <zxteam@protonmail.com>"]
edition = "2018"
repository = "https://github.com/khvzak/lua-src-rs"
keywords = ["lua", "picolua54"]
readme = "README.md"
license = "MIT"
description = """
Sources of PicoLua 5.4 and logic to build them.
"""

[workspace]
members = ["testcrate"]

[dependencies]
cc = "1.0.54"
